Counter using JS

--- a/css/index.html
+++ b/css/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Challenges</title>
-</head>
-<body>
-    <h2>List of CSS Challenges</h2>
+  </head>
+  <body>
+    <h1>List of CSS Challenges</h1>
     <ul>
+      <h2>
         <li><a href="./shapes/index.html">Shapes</a></li>
+      </h2>
     </ul>
-</body>
+  </body>
 </html>
