--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <body>
     <h1>Frontend Mini Challenges</h1>
 
-    <a href="./css/index.html"><h2>CSS</h2></a>
-    <a href=""><h2>JS</h2></a>
-    <a href=""><h2>React</h2></a>
+    <button>
+      <a href="./css/index.html"><h2>CSS</h2></a>
+    </button>
+    <button>
+      <a href=""><h2>JS</h2></a>
+    </button>
+    <button>
+      <a href=""><h2>React</h2></a>
+    </button>
   </body>
 </html>
